--- a/second.html
+++ b/second.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<img  src="C:\Users\cxj\Desktop\6.jpg">
+<img  src="6.jpg">
 <body>
 
 <h1>Design the survey questions</h1>
