--- a/practice3.html
+++ b/practice3.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>My Process</h1>
-    <img src="屏幕截图 2023-03-26 215556.png"  widt="300">
+    <img src="屏幕截图 2023-03-26 215556.png"  width="300">
 </body>
 </html>
