--- a/practice3.html
+++ b/practice3.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <!--this is heading-->
     <h1>My Process</h1>
+    <!--this is photo-->
     <img src="屏幕截图 2023-03-26 215556.png"  width="1000"  height="1000">
 </body>
 </html>
