--- a/practice.html
+++ b/practice.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+        /* Style the footer */
+.footer {
+  background-color: #f1f1f1;
+  padding: 10px;
+  text-align: center;
+}
+</style>
 </head>
 <body>
    
@@ -23,6 +31,10 @@
 <li>trip</li>
   </ol>
   <!--The tag defines an ordered list. The list sort is displayed numerically-->
+    <div class="footer">
+  <p>Aaron</p>
+</div>
+    <!--this is footer-->
 
 </body>
 </html>
