--- a/practice3.html
+++ b/practice3.html
@@ -5,11 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+      <style>
+        /* Style the footer */
+.footer {
+  background-color: #f1f1f1;
+  padding: 10px;
+  text-align: center;
+}
+        </style>
 </head>
 <body>
     <!--this is heading-->
     <h1>My Process</h1>
     <!--this is photo-->
     <img src="屏幕截图 2023-03-26 215556.png"  width="1000"  height="1000">
+    <div class="footer">
+        <p>Aaron</A></p>
+      </div>
+      <!--this is footer-->
 </body>
 </html>
