--- a/practice2.html
+++ b/practice2.html
@@ -55,6 +55,7 @@ body {
 <body>
     <div class="header">
         <h1>welcome to watch</h1>
+       <img src="未命名的设计 (1).png" width="100" height="100">
       </div>
     <!--this is header-->
      
