--- a/practice2.html
+++ b/practice2.html
@@ -67,6 +67,7 @@ li a:hover:not(.active) {
     <!--this is header-->
      
       <div class="topnav">
+          <a   href="practice5.html"> Home</a>
         <a class="active" href="practice2.html">Sample design</a>
         <a href="practice4.html">Introduction</a>
         
