--- a/practice5.html
+++ b/practice5.html
@@ -121,8 +121,8 @@ footer {
      
       <div class="topnav">
         <a class="active"  href="practice5.html"> Home</a>
-        <a  href="practice2.html">Sample design</a>
-        <a href="practice4.html">Introduction</a>
+        <a  href="practice2.html">Introduction</a>
+        <a href="practice4.html">picture set</a>
         
       </div>
 
