--- a/work1.html
+++ b/work1.html
@@ -2,7 +2,7 @@
  * @Author: error: error: git config user.name & please set dead value or install git && error: git config user.email & please set dead value or install git & please set dead value or install git
  * @Date: 2024-01-14 19:08:37
  * @LastEditors: error: error: git config user.name & please set dead value or install git && error: git config user.email & please set dead value or install git & please set dead value or install git
- * @LastEditTime: 2024-01-14 20:22:15
+ * @LastEditTime: 2024-03-13 10:03:31
  * @FilePath: \452\work1.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -43,6 +43,20 @@
             text-align: center;
             font-size: 14px;
         }
+
+        .container {
+            width: 100%;
+            /* 假设容器占据整个宽度 */
+        }
+
+        .white {
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+            /* 或者其他你需要的宽度 */
+            text-align: center;
+            /* 如果你还想让里面的文本也居中 */
+        }
     </style>
 </head>
 
@@ -56,40 +70,38 @@
     </div>
 
 
-    <h>Welcome visitors</h>
-    <As>Welcome to my homepage, allow me to introduce myself.As a senior web designer, I have accumulated over 10 years
+    <h1>Welcome visitors</h1>
+    <p>Welcome to my homepage, allow me to introduce myself.As a senior web designer, I have accumulated over 10 years
         of experience in this field.</p>
 
-        <p> experience:
-            Over the past ten years, I have designed websites for many well-known companies. I am good at creating
-            intuitive and engaging website designs from the user's point of view. At the same time, I have a deep
-            understanding of the principles of front-end and back-end development, and can ensure the realization of the
-            design and efficient performance.</p>
+    <p> experience:
+        Over the past ten years, I have designed websites for many well-known companies. I am good at creating
+        intuitive and engaging website designs from the user's point of view. At the same time, I have a deep
+        understanding of the principles of front-end and back-end development, and can ensure the realization of the
+        design and efficient performance.</p>
 
-        <h3> Photo:</h3>
-        <img src="f02b96bf88b4c4d98a6661f33e84836.jpg">
-
-
-        <h3>Skill:</h3>
-
-        <p>Proficiency in: Photoshop, Illustrator, Sketch, HTML5, CSS3, JavaScript</p><br>
-        <p></p>Familiar with: UI/UX design principles, responsive design, front-end development, back-end development
-        </p><br>
-        <p></p>Continuous learning: I keep an eye on new developments and technology trends in the industry to ensure
-        that my skills are always on the cutting edge.</p><br>
+    <h1 class="white"> Photo:</h1>
+    <img src="f02b96bf88b4c4d98a6661f33e84836.jpg" class="white">
 
 
-        <h3>Values:</h3>
-        <p></p>User-centric: Always put the user's experience first and design a website that truly meets their needs.
-        </p><br>
-        <p>Innovation and experimentation: Encourage innovative thinking and constantly try new design methods and tools
-            to bring better design results.</p><br>
-        <p></p>Teamwork: Understand the power of a team and be willing to work with others to achieve project goals.</p>
-        <br>
-        <p></p>Continuous learning: We firmly believe that only continuous learning can keep us competitive in this
-        rapidly changing industry.</p><br>
+    <h1>Skill:</h1>
+
+    <p>Proficiency in: Photoshop, Illustrator, Sketch, HTML5, CSS3, JavaScript</p><br>
+    <p></p>Familiar with: UI/UX design principles, responsive design, front-end development, back-end development
+    </p><br>
+    <p></p>Continuous learning: I keep an eye on new developments and technology trends in the industry to ensure
+    that my skills are always on the cutting edge.</p><br>
 
 
+    <h1>Values:</h1>
+    <p></p>User-centric: Always put the user's experience first and design a website that truly meets their needs.
+    </p><br>
+    <p>Innovation and experimentation: Encourage innovative thinking and constantly try new design methods and tools
+        to bring better design results.</p><br>
+    <p></p>Teamwork: Understand the power of a team and be willing to work with others to achieve project goals.</p>
+    <br>
+    <p></p>Continuous learning: We firmly believe that only continuous learning can keep us competitive in this
+    rapidly changing industry.</p><br>
 
 
 
@@ -97,13 +109,35 @@
 
 
 
-        <!-- 页脚 -->
-        <footer class="footer">
-            <p>21ITA1 Aaron</p>
+
+
+    <!-- 页脚 -->
+    <footer class="footer">
+        <p>21ITA1 Aaron</p>
 
 
 
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</html>
 
 
 
