--- a/work1.html
+++ b/work1.html
@@ -2,7 +2,7 @@
  * @Author: error: error: git config user.name & please set dead value or install git && error: git config user.email & please set dead value or install git & please set dead value or install git
  * @Date: 2024-01-14 19:08:37
  * @LastEditors: error: error: git config user.name & please set dead value or install git && error: git config user.email & please set dead value or install git & please set dead value or install git
- * @LastEditTime: 2024-03-13 10:03:31
+ * @LastEditTime: 2024-03-13 10:11:14
  * @FilePath: \452\work1.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -70,7 +70,7 @@
     </div>
 
 
-    <h1>Welcome visitors</h1>
+    <h1 class="white">Welcome visitors</h1>
     <p>Welcome to my homepage, allow me to introduce myself.As a senior web designer, I have accumulated over 10 years
         of experience in this field.</p>
 
@@ -81,10 +81,11 @@
         design and efficient performance.</p>
 
     <h1 class="white"> Photo:</h1>
-    <img src="f02b96bf88b4c4d98a6661f33e84836.jpg" class="white">
+    <div class="white">
+        <img src="f02b96bf88b4c4d98a6661f33e84836.jpg">
+    </div>
 
-
-    <h1>Skill:</h1>
+    <h1 class="white">Skill:</h1>
 
     <p>Proficiency in: Photoshop, Illustrator, Sketch, HTML5, CSS3, JavaScript</p><br>
     <p></p>Familiar with: UI/UX design principles, responsive design, front-end development, back-end development
@@ -93,7 +94,7 @@
     that my skills are always on the cutting edge.</p><br>
 
 
-    <h1>Values:</h1>
+    <h1 class="white">Values:</h1>
     <p></p>User-centric: Always put the user's experience first and design a website that truly meets their needs.
     </p><br>
     <p>Innovation and experimentation: Encourage innovative thinking and constantly try new design methods and tools
@@ -119,42 +120,3 @@
 
 </body>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</html>
