--- a/work1.html
+++ b/work1.html
@@ -80,12 +80,12 @@
         understanding of the principles of front-end and back-end development, and can ensure the realization of the
         design and efficient performance.</p>
 
-    <h1 class="white"> Photo:</h1>
+    <h1 class="white"> Photo</h1>
     <div class="white">
         <img src="f02b96bf88b4c4d98a6661f33e84836.jpg">
     </div>
 
-    <h1 class="white">Skill:</h1>
+    <h1 class="white">Skill</h1>
 
     <p>Proficiency in: Photoshop, Illustrator, Sketch, HTML5, CSS3, JavaScript</p><br>
     <p></p>Familiar with: UI/UX design principles, responsive design, front-end development, back-end development
@@ -94,7 +94,7 @@
     that my skills are always on the cutting edge.</p><br>
 
 
-    <h1 class="white">Values:</h1>
+    <h1 class="white">Values</h1>
     <p></p>User-centric: Always put the user's experience first and design a website that truly meets their needs.
     </p><br>
     <p>Innovation and experimentation: Encourage innovative thinking and constantly try new design methods and tools
