--- a/work1.html
+++ b/work1.html
@@ -2,7 +2,7 @@
  * @Author: error: error: git config user.name & please set dead value or install git && error: git config user.email & please set dead value or install git & please set dead value or install git
  * @Date: 2024-01-14 19:08:37
  * @LastEditors: error: error: git config user.name & please set dead value or install git && error: git config user.email & please set dead value or install git & please set dead value or install git
- * @LastEditTime: 2024-03-13 10:18:20
+ * @LastEditTime: 2024-03-13 10:23:27
  * @FilePath: \452\work1.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -101,7 +101,8 @@
     <p class="white">User-centric: Always put the user's experience first and design a website that truly meets their
         needs.
     </p><br>
-    <pclass="white">Innovation and experimentation: Encourage innovative thinking and constantly try new design methods
+    <p class="white">Innovation and experimentation: Encourage innovative thinking and constantly try new design
+        methods
         and tools
         to bring better design results.</p><br>
         <p class="white">Teamwork: Understand the power of a team and be willing to work with others to achieve project
@@ -126,4 +127,5 @@
 
 
 </body>
+
 
