--- a/work3.html
+++ b/work3.html
@@ -35,6 +35,10 @@
             text-align: center;
             font-size: 14px;
         }
+
+        .text-center {  
+    text-align: center;  
+}
     </style>
 </head>
 
@@ -46,7 +50,7 @@
         <a href="work3.html">Site Map</a>
 
     </div>
-    <h1>This is my flowchart and wireframing form</h1>
+    <h1 class="text-center">This is my flowchart and wireframing form</h1>
     <img src="photo1.PNG" height="500" width="500">
     <img src="photo2.PNG" width="500" height="500">
 
